Prevented comtent jump on hover caused by border being applied to the hover state

--- a/css/ui/_side-panel.scss
+++ b/css/ui/_side-panel.scss
@@ -12,6 +12,7 @@
 
 @media all and (min-width: $desktop) {
 	.side-panel {
+		border-right: 1px solid transparent;
 		display: block; // Desktop uses .side-panel instead of .header
 		left: 0;
 		min-height: 100%;
@@ -23,15 +24,14 @@
 		width: 250px;
 	}
 
-}
+
+	.side-panel:hover {
+		background: #F1EEEE;
+		border-color: gray;
+		box-shadow: inset 0 0 $quarter-spacing-unit rgba(50, 50, 50, 0.75);
+	}
 
 
-
-.side-panel:hover {
-	background: #F1EEEE;
-	border-right: 1px solid gray;
-	box-shadow: inset 0 0 $quarter-spacing-unit rgba(50, 50, 50, 0.75);
-}
 
 
 .nav--site a {
